--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- JS THIRD - EmberJS -->
         <script src="js/quo.js"></script>
         <script src="js/zepto.js"></script>
-        <script src="js/ht.mobile-1.0.js"></script>
+        <script src="js/ht.mobile.nav-1.0.js"></script>
         
         <!-- JS APP -->
         
