--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <script>
             
-            $$("document").ready(function (){
+            $("document").ready(function (){
                 HTM.init(
                     {
                         startup: "login.html",
